Fixed some of the problems IntelliJ found, now I'm going to push and submit and see what it says there